Fix padding bottom on mobile for Modal

--- a/src/app/components/layout/ModalComponent.scss
+++ b/src/app/components/layout/ModalComponent.scss
@@ -36,7 +36,7 @@
     opacity: 0;
     transition: transform 0.3s, opacity 0.3s;
 
-    padding-bottom: env(safe-area-inset-bottom);
+    // padding-bottom: env(safe-area-inset-bottom);
 
     @media screen and (max-width: $modalFullScreen - 1px) {
       position: absolute;
