--- a/src/app/components/layout/ModalLayoutComponent.scss
+++ b/src/app/components/layout/ModalLayoutComponent.scss
@@ -47,5 +47,6 @@
     display: flex;
     justify-content: space-between;
     background: var(--paper-color);
+    padding-bottom: env(safe-area-inset-bottom);
   }
 }
